Fixed alignment issue at some extend

--- a/xCheckStudio/Webviewer/CSS/checkModule.css
+++ b/xCheckStudio/Webviewer/CSS/checkModule.css
@@ -1295,6 +1295,8 @@ div {
   position            : absolute;
   margin              : 0;
   left                : 654px;
+  border-style        : solid;
+  border-width        : 2px;
   -ms-transform       : rotate(0deg); /* IE 9 */
   -webkit-transform   : rotate(0deg); /* Chrome, Safari, Opera */
   transform           : rotate(0deg);
@@ -1308,7 +1310,7 @@ div {
   position            : absolute;
   margin              : 0;
   left                : 0px;
-  border-style        : solid;
+  border-style        : thin;
   border-width        : 2px;
   border-color        : rgba(51, 51, 51, 1.0);
   -ms-transform       : rotate(0deg); /* IE 9 */
@@ -1962,9 +1964,9 @@ div {
   position            : absolute;
   margin              : 0;
   left                : 0px;
-  /* border-style        : solid;
+  border-style        : thin;
   border-width        : 2px;
-  border-color        : rgba(51, 51, 51, 1.0); */
+  border-color        : rgba(51, 51, 51, 1.0);
   -ms-transform       : rotate(0deg); /* IE 9 */
   -webkit-transform   : rotate(0deg); /* Chrome, Safari, Opera */
   transform           : rotate(0deg);
